syntax = 'proto3';import 'google/protobuf/wrappers.proto';package account;service Account {  rpc createNewAccount(CreateNewAccountInput) returns (CreateNewAccountOutput);  rpc updateExistAccount(UpdateExistAccount) returns (AccountOutput);  rpc deleteAccount(DeleteAccountInput) returns (google.protobuf.BoolValue);  rpc getAccount(GetAccountInput) returns (AccountOutput);  rpc getAccountByEmail(GetAccountByEmailInput) returns (AccountOutput);  rpc verifyEmailAccount(VerifyEmailAccount) returns (AccountOutput);  rpc login(LoginAccount) returns (CreateNewAccountOutput);}message AccountOutput {  string id = 1;  string email = 2;  string password = 3;  string registrationType = 4;}message CreateNewAccountInput {  string email = 1;  string password = 2;  string registrationType = 3;}message CreateNewAccountOutput {  string id = 1;  string token = 2;}message UpdateExistAccount {  string id = 1;  optional string email = 2;  optional string password = 3;}message DeleteAccountInput {  string id = 1;}message DeleteAccountOutput {  bool boolean = 1;}message GetAccountInput {  string id = 1;}message GetAccountByEmailInput {  string email = 1;}message VerifyEmailAccount {  string email = 1;  string id = 2;}message LoginAccount {  string email = 1;  string password = 2;}